--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "gulp-fscss",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "Gulp plugin to replace css media url with FirstSpirit $CMS_REF(...)$",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest"
+		"test": "mocha"
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +25,7 @@
 	},
 	"homepage": "https://github.com/PeterSonne/gulp-fscss#readme",
 	"devDependencies": {
-		"jest": "^27.3.1"
+		"mocha": "^9.1.3",
+		"vinyl": "^2.2.1"
 	}
 }
